--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
 
                     <div class="col-lg-6 ">
-                        <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
-                            frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+                        <iframe class="mb-4 mb-lg-0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3939.644882507816!2d7.481310314571397!3d9.096077890439803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e0a6185ee9d33%3A0x7d83b64c807e924b!2s5%20Erie%20Cl%2C%20Maitama%20904101%2C%20Abuja%2C%20Nigeria!5e0!3m2!1sen!2sbg!4v1638630416949!5m2!1sen!2sbg"
+                            frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen loading="lazy"></iframe>
                     </div>
 
                     <div class="col-lg-6">
